# v12-sandbox

./: .gitignore  .invenio  Dockerfile  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-services.yml  install_local_packages.sh  invenio.cfg  pyproject.toml  setup_roles.sh  wipe_recreate.sh
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
scripts/: docker_prune_all.sh  ignite_app.sh  roles_setup.sh  run_full_container.sh  vocabularies_import.sh
scripts/invenio/: add_role.sh
site/: .gitkeep  pyproject.toml  run-tests.sh  setup.cfg  setup.py
site/tests/: test_module.py
site/v12_sandbox/: __init__.py  views.py  webpack.py
