[project]
name = "sandbox-instance"
description = "no desc"
requires-python = ">= 3.12"
version = "0.12.0"
dependencies = [
  "invenio-app-rdm[opensearch2]~=12.0.0",
  "invenio-logging[sentry_sdk]~=2.0",
  "python-dotenv>=0.21.0",
  "uwsgi>=2.0",
  "uwsgitop>=0.11",
  "uwsgi-tools>=1.1.1",
  "lxml-html-clean>=0.1.1",
  "v12-sandbox",
]


[tool.setuptools]
py-modules = []


# [tool.uv.sources]
# v12-sandbox= { path = "site", editable = true }

# [tool.uv.sources]
# You need to lock site/ so the uv sync --lock command works in dockerfile.
# v12-sandbox = [{ path = "./site", editable = true }]

[tool.uv.sources]
v12-sandbox = { workspace = true } # < --- This seems to have a bug

[tool.uv.workspace] # < --- This seems to have a bug
members = ["site"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["site"]
