[project]
name = "v12-sandbox"
description = "no desc"
requires-python = ">= 3.12"
dynamic = ["version"]

[tool.hatch.version]
path = "v12_sandbox/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["v12_sandbox"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "invenio-app-rdm[opensearch2]~=12.1.0",
    "pytest-black-ng>=0.4.1",
    "pytest-invenio>=2.1.0,<3.0.0",
    "pytest-mock>=3",
]
